--- a/questions.html
+++ b/questions.html
@@ -24,11 +24,11 @@
         </div>
     </div>
 
-    <div class="questionDiv">
+    <!-- <div class="questionDiv">
         <h2>What does CPU stand for?</h2>
-    </div>
+    </div> -->
 
-    <div class="answerDiv">
+    <!-- <div class="answerDiv">
         <form class="answerForm">
             <div class="answerBox">
                 <input class="radioBtn" type="radio" name="answer" id="answerOne">
@@ -50,7 +50,7 @@
                 <label class="answer answerFour" for="answerFour">Central Processor Unit</label>
             </div>
         </form>
-    </div>
+    </div> -->
 
  
 
@@ -63,4 +63,6 @@
 
 </body>
 
+<script src="./scriptWelcomePage.js"></script>
+<script src="./scriptProva.js"></script>
 </html>
